Update webpack to product a smaller, more optimized bundle

--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js --progress --profile -p",
     "clean": "rm -rf ./dist"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "7",
+    "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^2.4.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
