--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
     "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
+    "brfs": "^1.4.3",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "jsdoc": "^3.5.5",
+    "transform-loader": "^0.2.4",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0"
   },
   "dependencies": {
     "blob-stream": "^0.1.3",
     "brfs": "^1.4.3",
+    "json-loader": "^0.5.7",
     "pdfkit": "^0.8.3"
   }
 }
