--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "docs": "jsdoc src/* --configure jsdoc.conf.json --destination docs --readme README.md",
     "build": "rm -rf ./dist && webpack --config webpack.config.js --progress --profile -p",
     "clean": "rm -rf ./dist",
-    "clean-docs": "rm -rf ./docs"
+    "clean-docs": "rm -rf ./docs",
+    "test": "jest test/"
   },
   "files": [
     "LICENSE.md",
@@ -23,17 +24,22 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "7",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
+    "blob-to-buffer": "^1.2.6",
     "brfs": "^1.4.3",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.2.1",
     "jsdoc": "^3.5.5",
+    "lodash": "^4.17.4",
+    "pdf3json": "^0.2.0",
     "transform-loader": "^0.2.4",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0"
