--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_install:
   - export PATH="$HOME/.yarn/bin:$PATH"
 script:
   - yarn run test
+after_script:
+  - yarn run report-coverage
 before_deploy:
   - yarn run docs
 deploy:
